# zeroToHero

./: .env  Cargo.toml  docker-compose.yml
docker/db/: init_db.sql
migrations/: 20260222190142_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
