[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["Henrique Veronez <v3ronez.dev@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"

[dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
    "migrate"
]
default-features = false
